--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is a tool for converting an SQLite database to and/or from another RDBMS system such as SQL Server. 
+
+Currently, there is semi-working, disorganized code for SQL Server, and IBM DB2.
+
 Based on code found here: 
 http://www.codeproject.com/Articles/26932/Convert-SQL-Server-DB-to-SQLite-DB
 
